fixed div covering button, padding + delay for show logo

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -43,7 +43,7 @@ h2 {
   color: #909090;
   padding: 0;
   transform: translateX(8px);
-  margin-bottom: 4px;
+  // margin-bottom: 4px;
 
   i {
     font-size: 20px;
